se ajusta la transacción, se agrega método put de actualización
